--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,21 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-  .react-datepicker-wrapper {
-    display: inline-block;
-    padding: 0;
-    border: 0;
-    width: 100%;
-    border: 2px solid red;
-  }
-
-  .react-datepicker {
-    border: 2px solid red;
-  }
-
-  .react-datepicker__input-time-container {
-    border: 2px solid red;
-  }
-}
+@import './blocks/picker.css';
