--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @import './blocks/picker.css';
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
